test/fails/bad_functions/main_argument.lgl
void main(int x) {
    print(1);
    return;
}
